Ajuste do dicionário, progresso do EDA e progresso Dicionário foi atualizado com as colunas atuais, detalhando o significado. Também recebeu observações sobre algumas particularidades dos dados. No notebook foi dado continuidade no EDA que não subiu no último commit. Inclusão da parte 0 no detalhe do projeto.

--- a/notebooks/0_cleaning_eda.ipynb
+++ b/notebooks/0_cleaning_eda.ipynb
@@ -839,12 +839,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7389a366",
+   "metadata": {},
+   "source": [
+    "### Remoção de colunas que não utilizaremos\n",
+    "Não utilizaremos as colunas NCM e CST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b3bb63fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns=['CST', 'NCM'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ee11a6b2",
    "metadata": {},
    "source": [
     "### Conversão dos dados necessários\n",
     "\n",
-    "Podemos ver que temos que categorizar os Funcinoários, converter Data para datetime e mudar quantidade para valores inteiros, não se vende \"valores quebrados\" de peças."
+    "Podemos ver que temos que categorizar os Funcinoários (não queremos simular uma hierarquia entre eles), converter Data para datetime e mudar quantidade para valores inteiros, não se vende \"valores quebrados\" de peças."
    ]
   },
   {
@@ -860,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "id": "d5eb16aa",
    "metadata": {},
    "outputs": [
@@ -885,8 +904,8 @@
         },
         {
          "name": "Quantidade",
-         "rawType": "float64",
-         "type": "float"
+         "rawType": "int64",
+         "type": "integer"
         },
         {
          "name": "ValorMedio",
@@ -914,16 +933,6 @@
          "type": "string"
         },
         {
-         "name": "CST",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "NCM",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
          "name": "Codigo",
          "rawType": "int64",
          "type": "integer"
@@ -934,20 +943,18 @@
          "type": "string"
         }
        ],
-       "ref": "ecac79ba-fdde-4c42-8fb7-f8bc275ad6fb",
+       "ref": "0d0bfa7c-3922-4361-a79c-551b3df084cc",
        "rows": [
         [
          "0",
          "2015-01-02 00:00:00",
          "OLEO SELENIA SPRINTA 4T 20W-50",
-         "1.0",
+         "1",
          "11.7",
          "11.7",
          "4",
          "24039",
          "C",
-         "60",
-         "27101932",
          "913",
          "OLEO"
         ],
@@ -955,14 +962,12 @@
          "1",
          "2015-01-02 00:00:00",
          "PNEU TRAS. BIZ LEVORIN DAKA 80/100X14",
-         "1.0",
+         "1",
          "109.25",
          "109.25",
          "3",
          "24049",
          "C",
-         "60",
-         "40114000",
          "829",
          "PNEU"
         ],
@@ -970,14 +975,12 @@
          "2",
          "2015-01-02 00:00:00",
          "CAMARA AR CG/TITAN LEVORIN (SA 18)",
-         "1.0",
+         "1",
          "24.61",
          "24.61",
          "4",
          "24039",
          "C",
-         "60",
-         "40139000",
          "442",
          "CAMARA"
         ],
@@ -985,14 +988,12 @@
          "3",
          "2015-01-02 00:00:00",
          "CAMARA AR TRAS. BROS/XLR 250 PIRELLI",
-         "1.0",
+         "1",
          "37.75",
          "37.75",
          "4",
          "24043",
          "C",
-         "60",
-         "40139000",
          "1376",
          "CAMARA"
         ],
@@ -1000,20 +1001,18 @@
          "4",
          "2015-01-02 00:00:00",
          "CABO EMB. KS/ES 2002/08 FAN IMP/CG-83",
-         "1.0",
+         "1",
          "10.39",
          "10.39",
          "3",
          "24037",
          "C",
-         "60",
-         "84831030",
          "2146",
          "CABO"
         ]
        ],
        "shape": {
-        "columns": 12,
+        "columns": 10,
         "rows": 5
        }
       },
@@ -1044,8 +1043,6 @@
        "      <th>Func</th>\n",
        "      <th>Ndoc</th>\n",
        "      <th>Tipo</th>\n",
-       "      <th>CST</th>\n",
-       "      <th>NCM</th>\n",
        "      <th>Codigo</th>\n",
        "      <th>Categoria</th>\n",
        "    </tr>\n",
@@ -1055,14 +1052,12 @@
        "      <th>0</th>\n",
        "      <td>2015-01-02</td>\n",
        "      <td>OLEO SELENIA SPRINTA 4T 20W-50</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>11.70</td>\n",
        "      <td>11.70</td>\n",
        "      <td>4</td>\n",
        "      <td>24039</td>\n",
        "      <td>C</td>\n",
-       "      <td>60</td>\n",
-       "      <td>27101932</td>\n",
        "      <td>913</td>\n",
        "      <td>OLEO</td>\n",
        "    </tr>\n",
@@ -1070,14 +1065,12 @@
        "      <th>1</th>\n",
        "      <td>2015-01-02</td>\n",
        "      <td>PNEU TRAS. BIZ LEVORIN DAKA 80/100X14</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>109.25</td>\n",
        "      <td>109.25</td>\n",
        "      <td>3</td>\n",
        "      <td>24049</td>\n",
        "      <td>C</td>\n",
-       "      <td>60</td>\n",
-       "      <td>40114000</td>\n",
        "      <td>829</td>\n",
        "      <td>PNEU</td>\n",
        "    </tr>\n",
@@ -1085,14 +1078,12 @@
        "      <th>2</th>\n",
        "      <td>2015-01-02</td>\n",
        "      <td>CAMARA AR CG/TITAN LEVORIN (SA 18)</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>24.61</td>\n",
        "      <td>24.61</td>\n",
        "      <td>4</td>\n",
        "      <td>24039</td>\n",
        "      <td>C</td>\n",
-       "      <td>60</td>\n",
-       "      <td>40139000</td>\n",
        "      <td>442</td>\n",
        "      <td>CAMARA</td>\n",
        "    </tr>\n",
@@ -1100,14 +1091,12 @@
        "      <th>3</th>\n",
        "      <td>2015-01-02</td>\n",
        "      <td>CAMARA AR TRAS. BROS/XLR 250 PIRELLI</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>37.75</td>\n",
        "      <td>37.75</td>\n",
        "      <td>4</td>\n",
        "      <td>24043</td>\n",
        "      <td>C</td>\n",
-       "      <td>60</td>\n",
-       "      <td>40139000</td>\n",
        "      <td>1376</td>\n",
        "      <td>CAMARA</td>\n",
        "    </tr>\n",
@@ -1115,14 +1104,12 @@
        "      <th>4</th>\n",
        "      <td>2015-01-02</td>\n",
        "      <td>CABO EMB. KS/ES 2002/08 FAN IMP/CG-83</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>10.39</td>\n",
        "      <td>10.39</td>\n",
        "      <td>3</td>\n",
        "      <td>24037</td>\n",
        "      <td>C</td>\n",
-       "      <td>60</td>\n",
-       "      <td>84831030</td>\n",
        "      <td>2146</td>\n",
        "      <td>CABO</td>\n",
        "    </tr>\n",
@@ -1132,21 +1119,21 @@
       ],
       "text/plain": [
        "        Data                                Produto  Quantidade  ValorMedio  \\\n",
-       "0 2015-01-02         OLEO SELENIA SPRINTA 4T 20W-50         1.0       11.70   \n",
-       "1 2015-01-02  PNEU TRAS. BIZ LEVORIN DAKA 80/100X14         1.0      109.25   \n",
-       "2 2015-01-02     CAMARA AR CG/TITAN LEVORIN (SA 18)         1.0       24.61   \n",
-       "3 2015-01-02   CAMARA AR TRAS. BROS/XLR 250 PIRELLI         1.0       37.75   \n",
-       "4 2015-01-02  CABO EMB. KS/ES 2002/08 FAN IMP/CG-83         1.0       10.39   \n",
+       "0 2015-01-02         OLEO SELENIA SPRINTA 4T 20W-50           1       11.70   \n",
+       "1 2015-01-02  PNEU TRAS. BIZ LEVORIN DAKA 80/100X14           1      109.25   \n",
+       "2 2015-01-02     CAMARA AR CG/TITAN LEVORIN (SA 18)           1       24.61   \n",
+       "3 2015-01-02   CAMARA AR TRAS. BROS/XLR 250 PIRELLI           1       37.75   \n",
+       "4 2015-01-02  CABO EMB. KS/ES 2002/08 FAN IMP/CG-83           1       10.39   \n",
        "\n",
-       "    Total Func   Ndoc Tipo  CST       NCM  Codigo Categoria  \n",
-       "0   11.70    4  24039    C   60  27101932     913      OLEO  \n",
-       "1  109.25    3  24049    C   60  40114000     829      PNEU  \n",
-       "2   24.61    4  24039    C   60  40139000     442    CAMARA  \n",
-       "3   37.75    4  24043    C   60  40139000    1376    CAMARA  \n",
-       "4   10.39    3  24037    C   60  84831030    2146      CABO  "
+       "    Total Func   Ndoc Tipo  Codigo Categoria  \n",
+       "0   11.70    4  24039    C     913      OLEO  \n",
+       "1  109.25    3  24049    C     829      PNEU  \n",
+       "2   24.61    4  24039    C     442    CAMARA  \n",
+       "3   37.75    4  24043    C    1376    CAMARA  \n",
+       "4   10.39    3  24037    C    2146      CABO  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,14 +1303,286 @@
    "id": "0fc6fe80",
    "metadata": {},
    "source": [
-    "ok!\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0df5d7a4",
+   "metadata": {},
+   "source": [
+    "### Cardinalidade "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "f08024a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- Cada coluna possui os seguintes valores únicos:\n",
+      "Produtos únicos: 6582\n",
+      "Categorias únicas: 223\n",
+      "Funcionários únicos: 9\n",
+      "Nº de vendas (Ndoc): 113075\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('-- Cada coluna possui os seguintes valores únicos:')\n",
+    "print(\"Produtos únicos:\", df['Produto'].nunique())\n",
+    "print(\"Categorias únicas:\", df['Categoria'].nunique())\n",
+    "print(\"Funcionários únicos:\", df['Func'].nunique())\n",
+    "print(\"Nº de vendas (Ndoc):\", df['Ndoc'].nunique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4f526dc",
+   "metadata": {},
+   "source": [
+    "### Análise de Produtos/Categorias\n",
+    "Vamos ver quais produtos e categorias são mais e menos frequentes.\n",
+    "Representando os produtos mais e menos vendidos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "512f149e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "Produto",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "count",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "113fcbef-29d1-4d1c-8589-154859453378",
+       "rows": [
+        [
+         "OLEO SELENIA SPRINTA 4T 20W-50",
+         "8937"
+        ],
+        [
+         "OLEO DULUB MOTO 4T 20W50 SL",
+         "3404"
+        ],
+        [
+         "OLEO LUBRAX GP MOTO 4T 20W50",
+         "3307"
+        ],
+        [
+         "OLEO MOBIL 4T 20 W 50",
+         "2954"
+        ],
+        [
+         "ROLAM. 6301 IMP. - DIANT. CG",
+         "1978"
+        ],
+        [
+         "VISEIRA CAPACETE SAN MARINO CRISTAL 0",
+         "1740"
+        ],
+        [
+         "LAMP. STOP CG 12V - IMP.",
+         "1624"
+        ],
+        [
+         "OLEO MOTO 4T 20W50",
+         "1571"
+        ],
+        [
+         "RET. VALVULA BIZ/TIT150/2002/03/04 MA",
+         "1530"
+        ],
+        [
+         "SERV. CAPA BANCO",
+         "1528"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 10
+       }
+      },
+      "text/plain": [
+       "Produto\n",
+       "OLEO SELENIA SPRINTA 4T 20W-50           8937\n",
+       "OLEO DULUB MOTO 4T 20W50 SL              3404\n",
+       "OLEO LUBRAX GP MOTO 4T 20W50             3307\n",
+       "OLEO MOBIL 4T 20 W 50                    2954\n",
+       "ROLAM. 6301 IMP. - DIANT. CG             1978\n",
+       "VISEIRA CAPACETE SAN MARINO CRISTAL 0    1740\n",
+       "LAMP. STOP CG 12V - IMP.                 1624\n",
+       "OLEO MOTO 4T 20W50                       1571\n",
+       "RET. VALVULA BIZ/TIT150/2002/03/04 MA    1530\n",
+       "SERV. CAPA BANCO                         1528\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prod_freq = df['Produto'].value_counts()\n",
+    "prod_freq.head(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8e2b570",
+   "id": "b78adb03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Produto\n",
+      "GUARNICAO ESCAP. CB 400 (GR)             1\n",
+      "RET. MESA BIZ PART.(INT.ELETRICA) VED    1\n",
+      "CORRENTE COM. POP-110I 90L WGK           1\n",
+      "MACANETA FREIO POP 110I 2018/22 3165     1\n",
+      "ESTATOR COMPL. BROS 150 09/14 ZOUIL-1    1\n",
+      "KIT EMB. CG-150 WGK                      1\n",
+      "CABO FREIO CG/FAN 150 2014/15/CG160      1\n",
+      "INTERRUP. IGNIC. BIZ-110I 2016/17 C/T    1\n",
+      "PARALAMA DIANT. BIZ 04/05 VERM.          1\n",
+      "VIRABREQUIM CG-150 S/ROLAM.AUDAX         1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(prod_freq.tail(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05960487",
+   "metadata": {},
+   "source": [
+    "4 dos 5 produtos mais vendidos são óleo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "cef9a8cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categoria\n",
+      "OLEO           9.519920\n",
+      "RET.           5.379159\n",
+      "PARAF.         5.233787\n",
+      "LAMP.          4.140761\n",
+      "JUNTA          4.127865\n",
+      "                 ...   \n",
+      "GANCHO         0.000391\n",
+      "CORPO          0.000391\n",
+      "LIMITADOR      0.000391\n",
+      "BORRACHA       0.000391\n",
+      "VIRABREQUIM    0.000391\n",
+      "Name: proportion, Length: 223, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat_freq = df['Categoria'].value_counts(normalize=True) * 100\n",
+    "print(cat_freq)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a164ad02",
+   "metadata": {},
+   "source": [
+    "Aqui acima temos as categorias que mais vendem em porcentagem.\n",
+    "Possivelmente as de baixa frequência podem ser colocadas junto a outra categoria."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "be5967e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categoria\n",
+      "OLEO       9.519920\n",
+      "RET.       5.379159\n",
+      "PARAF.     5.233787\n",
+      "LAMP.      4.140761\n",
+      "JUNTA      4.127865\n",
+      "CABO       3.768342\n",
+      "PORCA      2.801930\n",
+      "KIT        2.655777\n",
+      "ROLAM.     2.499072\n",
+      "ARRUELA    1.950409\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cat_freq.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "b6bbc8c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categoria\n",
+      "X-PNEU         0.000391\n",
+      "LAMPADA        0.000391\n",
+      "DOBRADICA      0.000391\n",
+      "X-PASTILHA     0.000391\n",
+      "SACA           0.000391\n",
+      "GANCHO         0.000391\n",
+      "CORPO          0.000391\n",
+      "LIMITADOR      0.000391\n",
+      "BORRACHA       0.000391\n",
+      "VIRABREQUIM    0.000391\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cat_freq.tail(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82121938",
    "metadata": {},
    "outputs": [],
    "source": []
